# streaming_connected_component_discovery

./: CMakeLists.txt  README.md
cmake_helper/: README.md  cmake_helper-config.cmake
data/: NOTES.txt  mapper_project_template.ini
exe_create_empty_feature_database/: CMakeLists.txt  create_empty_feature_database-config.cmake  create_empty_feature_database.cpp
exe_densification/: CMakeLists.txt  densification-config.cmake  densification.cpp
exe_list_cuda_devices/: CMakeLists.txt  list_cuda_devices-config.cmake  list_cuda_devices.cpp
exe_streaming_connected_component_discovery/: batch_match_task.h  geometric_verification_result.h  image_cache_entry.cpp  image_cache_entry.h  logger.cpp  logger.h  main.cpp  main_module_thread_handler.cpp  main_module_thread_handler.h  streaming_main_module.cpp  streaming_main_module.h  streaming_state.h
exe_vocab_tree_learn/: CMakeLists.txt  vocab_tree_learn-config.cmake  vocab_tree_learn.cpp
lib_assert/: CMakeLists.txt
lib_buffer_data/: CMakeLists.txt  buffer_data-config.cmake
lib_config/: CMakeLists.txt  config-config.cmake
lib_core/: CMakeLists.txt  core-config.cmake
lib_core/src/core/: alignment.h  checkpoint.h  colorspace.h  colorspace_opencv.h  compiler_macros.h  file_helper.cpp  file_helper.h  image_dimensions.h  indexed_storage.h  manager_worker_synchronization.h  math.h  shared_batch_buffer.h  shared_bounded_queue.h  shared_counter.h  shared_speed_stats.h  shared_value.h  signal.h  speed_stats.h  streaming_module_interface.h  thread_helper.h  timer.h  two_pass_checkpoint_with_thread_assignment.h
lib_core/src/core/src/: shared_buffer_base.h
lib_cuda_helper/: CMakeLists.txt
lib_cuda_helper/src/cuda_helper/: cuda_helper.cpp  cuda_helper.h  cuda_macros.h  cuda_memcpy_buffer.h
lib_cuda_sift/: CMakeLists.txt  cuda_sift-config.cmake
lib_dataset/: CMakeLists.txt  dataset-config.cmake
lib_descriptor_matcher/: CMakeLists.txt  descriptor_matcher-config.cmake
lib_descriptor_matcher/src/descriptor_matcher/: dot_product_matcher_uchar.cu  dot_product_matcher_uchar.h
lib_descriptor_matcher/src/descriptor_matcher/src/: descriptor_matcher_base.h  descriptor_matcher_kernels.cuh
lib_distance_matrix/: CMakeLists.txt  distance_matrix-config.cmake
lib_distance_matrix/src/distance_matrix/: dot_product_matrix_uchar.cpp  dot_product_matrix_uchar.cu  dot_product_matrix_uchar.h
lib_distance_matrix/src/distance_matrix/src/: distance_matrix_base.h  distance_matrix_struct.h  distance_matrix_util.cu  distance_matrix_util.h  distance_matrix_util_kernels.cuh
lib_estimator/: CMakeLists.txt  estimator-config.cmake
lib_estimator/src/estimator/: check_for_degenerate_match.h  essential_matrix_estimator.cpp  essential_matrix_estimator.h
lib_estimator/src/estimator/v3d_code/: DataContainer.h  Features.h  Matcher.cpp  Matcher.h  OCV_utils.cpp  OCV_utils.h  essentialMat.cpp  essentialMat.h  ocv_arrsac.cpp  ocv_arrsac.h  ocv_arrsac_E_5pts.cpp  ocv_arrsac_E_5pts.h  triangulation.cpp  triangulation.h  v3d_cameramatrix.h  v3d_distortion.h  v3d_linear.h  v3d_linear_lu.h  v3d_linear_tnt.h  v3d_linearbase.h  v3d_mathutilities.cpp  v3d_mathutilities.h  v3d_mviewutilities.cpp  v3d_mviewutilities.h  v3d_ocv.cpp  v3d_ocv.h  v3d_optimization.cpp  v3d_optimization.h  v3d_poseutilities.cpp  v3d_poseutilities.h
lib_feature_database/: CMakeLists.txt  feature_database-config.cmake
lib_feature_database/src/base2d/: camera.cc  camera.h  feature_database.cc  feature_database.h  image_data.h
lib_feature_database/src/base3d/: camera_models.cc  camera_models.h
lib_feature_database/src/estimators/: two_view_geometry.h
lib_feature_database/src/util/: misc.cc  misc.h  sqlite3_utils.h  types.h  verify.cc  verify.h
lib_features/: CMakeLists.txt  features-config.cmake
lib_google_breakpad_wrapper/: CMakeLists.txt  google_breakpad_wrapper-config.cmake
lib_google_breakpad_wrapper/src/google_breakpad_wrapper/: google_breakpad_wrapper.cpp  google_breakpad_wrapper.h
lib_image_loader/: CMakeLists.txt  image_loader-config.cmake
lib_image_resizer/: CMakeLists.txt
lib_image_resizer/src/image_resizer/: image_resizer.cpp  image_resizer.h
lib_jpeg_parser/: CMakeLists.txt  jpeg_parser-config.cmake
lib_main_module/: CMakeLists.txt  main_module-config.cmake
lib_main_module/src/main_module/: feature_database_wrapper.h  main_args.cpp  main_args.h  sift_matcher_thread_group.cpp  sift_matcher_thread_group.h  streaming_ipc2sfm_types.h
lib_streaming_balanced_pcdb_file_reader/: CMakeLists.txt  streaming_balanced_pcdb_file_reader-config.cmake
lib_streaming_balanced_pcdb_file_reader/src/streaming_balanced_pcdb_file_reader/: streaming_balanced_pcdb_file_reader.cpp  streaming_balanced_pcdb_file_reader.h
lib_streaming_cuda_sift/: CMakeLists.txt  streaming_cuda_sift-config.cmake
lib_streaming_cuda_sift/src/streaming_cuda_sift/: streaming_cuda_sift.cpp  streaming_cuda_sift.h
lib_streaming_image_loader/: CMakeLists.txt  streaming_image_loader-config.cmake
lib_streaming_image_loader/src/streaming_image_loader/: streaming_image_loader.cpp  streaming_image_loader.h
lib_streaming_sift_file_writer/: CMakeLists.txt  streaming_sift_file_writer-config.cmake
lib_streaming_sift_file_writer/src/streaming_sift_file_writer/: streaming_sift_file_writer.cpp  streaming_sift_file_writer.h
lib_streaming_visual_words/: CMakeLists.txt  streaming_visual_words-config.cmake
lib_streaming_visual_words/src/streaming_visual_words/: streaming_visual_words.cpp  streaming_visual_words.h
lib_v3d_support/: CMakeLists.txt
lib_v3d_support/examples/: pcdb.txt
lib_v3d_support/src/v3d_support/: pcdb.cpp  pcdb.h  sift_parser.cpp  sift_parser.h
lib_vocab_tree/: CMakeLists.txt  vocab_tree-config.cmake
lib_vocab_tree/src/vocab_tree/: VocabFlatNode.cpp  VocabTree.cpp  VocabTree.h  VocabTreeBuild.cpp  VocabTreeIO.cpp  VocabTreeUtil.cpp  kmeans.cpp  kmeans.h  kmeans_kd.cpp
scripts/: create_folder_hierarchy.py  export_colmap_database_subset.py  run_all_mapper_tasks.py
scripts/examples/: create_sift_folders.bat  run_all_mapper_tasks.bat  run_connected_component_discovery.bat  (+1 more)
(+33 files in other folders)
